--- a/templates/content.html
+++ b/templates/content.html
@@ -1,3 +1,2 @@
-<p>At this day i worked on a code for a server, that would handle a requests on site in futer. </p>
-<p>I writed a script, that will give you a page when you request it by cliking on a button in navigation bar. Also that script allows me to change a content of site without code, just by add some text files, wrtited in markdown markup.</p>
-<p>Now I better understend how the servers and internet network in all works. Also, during this day i get acquainted with encoding, I lerned what is it and how it works on basic level.</p>
+<p>At this day I seted up server for this site, and starting from this day is is acsessable in internet </p>
+<p>Also I setted up a SSL certificate, now browser won't say, that connection is not secure. </p>
